# tee-solver

./: .gitignore  .gitpod.yml  Cargo.toml  README.md  makefile
contracts/intents-vault/: Cargo.toml
contracts/intents-vault/res/: intents_vault.wasm
contracts/intents-vault/src/: lib.rs
contracts/mock-ft/: Cargo.toml
contracts/mock-ft/res/: mock_ft.wasm
contracts/mock-ft/src/: lib.rs
contracts/mock-intents/: Cargo.toml
contracts/mock-intents/res/: mock_intents.wasm
contracts/mock-intents/src/: lib.rs  token.rs  token_receiver.rs
contracts/solver-registry/: Cargo.toml  README.md
contracts/solver-registry/res/: solver_registry.wasm
contracts/solver-registry/src/: account.rs  admin.rs  collateral.rs  events.rs  lib.rs  pool.rs  token_receiver.rs  types.rs  upgrade.rs  view.rs
contracts/solver-registry/src/attestation/: app_compose.rs  attestation.rs  collateral.rs  hash.rs  measurements.rs  mod.rs  report_data.rs
contracts/solver-registry/src/ext/: ft.rs  intents_vault.rs
contracts/solver-registry/src/nep245/: README.md  mod.rs
contracts/solver-registry/src/nep245/implementation/: core.rs  enumeration.rs  mod.rs  resolver.rs
contracts/solver-registry/src/nep245/interface/: enumeration.rs  events.rs  mod.rs
contracts/solver-registry/tests/: constants.rs  test_basics.rs  test_liqudity.rs  test_register_worker.rs  test_single_active_worker.rs  test_single_worker.rs  test_withdraw_assets.rs  test_worker_basics.rs  utils.rs
contracts/solver-registry/tests/common/: constants.rs  mod.rs  utils.rs
contracts/solver-registry/tests/samples/: quote_collateral.json  tcb_info.json
contracts/solver-registry/tests/samples/alice/: tcb_info.json
contracts/solver-registry/tests/scripts/: create-pool.sh  deploy.sh  worker.sh
scripts/mainnet/: create-pool-0.sh  create-pool-1.sh  create-pool.sh  deploy.sh  worker.sh
scripts/testnet/: create-pool.sh  deploy.sh  worker.sh
server/: .gitignore  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml
server/src/: index.ts
server/src/config/: index.ts  mainnet.ts  testnet.ts
server/src/near/: solver-registry.ts  utils.ts
server/src/phala/: credentials.ts  cvms.ts
server/src/tasks/: deploy-solvers.ts  fund-solvers.ts
server/src/types/: config.ts  solver-registry.ts  solver.ts
